# neural-network-pdes

./: .gitignore  LICENSE  Pipfile  README.md  euler.py  euler_eigensystem.ipynb  pyproject.toml
config/: adaptive_euler.yaml  euler-sirens.yaml  euler.yaml  euler_adaptive.yaml
config/optimizer/: adahessian.yaml  adam.yaml  adamw.yaml  lbfgs.yaml  lion.yaml  sophia.yaml
examples/: adaptive_euler.py  euler.py  high_order_euler.py  high_order_euler_adaptive.py  sirens_euler.py
neural_network_pdes/: common.py  euler.py  euler_conservative.py  euler_networks.py  switch_network.py  transform_network.py
tests/: test_loss.py
