[tool.poetry]
name = "neural-network-pdes"
version = "0.2.0"
description = ""
authors = ["John <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = "^3.6.2"
omegaconf = "^2.2.3"
torch-optimizer = "^0.3.0"
lion-pytorch = "^0.2.3"
hydra-core = "^1.3.2"
high-order-layers-torch = "^2.5.1"
pillow = "^10.3.0"
sophia-optimizer = {git = "https://github.com/stas00/Sophia.git", rev = "patch-1"}
non_uniform_piecewise_layers = { path = "../", develop = true }


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^22.3.0", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
tensorboard = "^2.11.0"
jupyter = "^1.0.0"
sympy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
