[project]
name = "neural-network-pdes"
version = "0.2.0"
description = "Neural Network Implicit Representation of Partial Differential Equations"
authors = [{name = "John", email = "john.loverich@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
readme = "README.md"

dependencies = [
    "matplotlib>=3.6.2",
    "omegaconf>=2.2.3",
    "torch-optimizer>=0.3.0",
    "lion-pytorch>=0.2.3,<0.3",
    "hydra-core>=1.3.2",
    "high-order-layers-torch>=2.5.1",
    "pillow>=10.3.0",
    "sophia-optimizer @ git+https://github.com/stas00/Sophia.git@patch-1",
    "non-uniform-piecewise-layers>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "black>=22.3.0",
    "tensorboard>=2.11.0",
    "jupyter>=1.0.0",
    "sympy>=1.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.workspace]
members = []
